<resources>
    <string name="app_name">Android CC for OB</string>

    <!-- General -->
    <string name="general_content_description">Image</string>
    <string name="default_error">Something went wrong, please try again</string>

    <!-- Log In -->
    <string name="prompt_email">Your Email</string>
    <string name="prompt_password">********</string>
    <string name="action_sign_in">Sign In</string>
    <string name="invalid_username">Invalid email address</string>
    <string name="invalid_password">Password must be > 5 characters</string>
    <string name="sign_in_to_your_account">Sign in to your account below 👇</string>

    <!-- Profile -->
    <string name="edit_your_profile">Edit Your Profile</string>
    <string name="edit_your_profile_name">Your name</string>
    <string name="edit_your_profile_city">Your city</string>
    <string name="edit_your_profile_bio">A little about your self…</string>
    <string name="edit_your_profile_success">Your profile data has been updated! 🙌</string>
    <string name="edit_your_profile_error">Error while trying to update your data 😔, please try again</string>
    <string name="edit_your_profile_save_profile">Save Profile</string>
    <string name="edit_your_profile_sign_out">Sign Out</string>

    <!-- Food Feed -->
    <string name="food_feed_price">$%.2f</string>
    <string name="food_feed_rating">%.1f</string>
    <string name="food_feed_what_would">What would</string>
    <string name="food_feed_you_like">you like?</string>

</resources>