<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".profile.ProfileBottomSheetFragment">

        <ImageView
            android:id="@+id/iv_top_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/general_content_description"
            android:src="@drawable/button_hide_bottom_sheet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_image_profile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="34dp"
            android:contentDescription="@string/general_content_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_top_button"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/general_margin"
            android:fontFamily="@font/poppinsbold"
            android:includeFontPadding="false"
            android:text="@string/edit_your_profile"
            android:textColor="#EF8829"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_image_profile" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppinsregular"
            android:includeFontPadding="false"
            android:text="@string/edit_your_profile"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_header_title"
            tools:text="someUser@gmail.com" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ed_name"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="@dimen/general_margin"
            android:layout_marginEnd="24dp"
            android:background="@drawable/ed_profile_background"
            android:hint="@string/edit_your_profile_name"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:selectAllOnFocus="true"
            android:textColorHint="@color/hint_color"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_email" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ed_city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/general_margin"
            android:background="@drawable/ed_profile_background"
            android:hint="@string/edit_your_profile_city"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:selectAllOnFocus="true"
            android:textColorHint="@color/hint_color"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="@id/ed_name"
            app:layout_constraintStart_toStartOf="@id/ed_name"
            app:layout_constraintTop_toBottomOf="@id/ed_name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ed_bio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/general_margin"
            android:background="@drawable/ed_profile_background"
            android:hint="@string/edit_your_profile_bio"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:selectAllOnFocus="true"
            android:textColorHint="@color/hint_color"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="@id/ed_name"
            app:layout_constraintStart_toStartOf="@id/ed_name"
            app:layout_constraintTop_toBottomOf="@id/ed_city" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="64dp"
            android:background="@drawable/btn_positive_background"
            android:text="@string/edit_your_profile_save_profile"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/ed_name"
            app:layout_constraintStart_toStartOf="@id/ed_name"
            app:layout_constraintTop_toBottomOf="@+id/ed_bio"
            app:layout_constraintVertical_bias="0.2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_out"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="64dp"
            android:background="@drawable/btn_negative_background"
            android:text="@string/edit_your_profile_sign_out"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/ed_name"
            app:layout_constraintStart_toStartOf="@id/ed_name"
            app:layout_constraintTop_toBottomOf="@+id/save_profile"
            app:layout_constraintVertical_bias="0.2" />

        <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/general_margin"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/sign_out"
            app:layout_constraintStart_toStartOf="@id/sign_out"
            app:layout_constraintTop_toBottomOf="@id/sign_out"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>